@@ -4,6 +4,10 @@ Development Progress	:
 ---------------------------
 
 2012-06-14 (SVN):
+    * Now that timidity works OK with Amiga paths, preferred it instead
+      of wildmidi in AROS builds.
+
+2012-06-14 (SVN):
     * Revamped engine pathname handling: fs_gamedir, fs_userdir and
       fs_basedir are not global anymore. All function needing to make a
       path string using them now go through the new FS helper functions
